@@ -38,6 +38,7 @@ prop.desc.usecursors=Use SQL Server fast forward only result sets for forward on
 prop.desc.usejcifs=Force use of jCIFS library on Windows for connecting via named pipes.|N|true,false
 prop.desc.uselobs=Map large types (IMAGE and TEXT/NTEXT) to LOBs vs. String/byte[].|N|true,false
 prop.desc.usentlmv2=Set to true to send LMv2/NTLMv2 responses when using Windows authentication.|N|true,false
+prop.desc.usekerberos=Set to true to use only Kerberos as the authentication mechanism.|N|true,false
 prop.desc.user=The database user.|N|
 prop.desc.wsid=Workstation ID or client host name override. Will be stored in master.dbo.sysprocesses, column hostname.|N|
 prop.desc.xaemulation=Set to false to use the Microsoft Distributed Transaction Coordinator.|N|true,false
